--- a/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/activity_main.xml
+++ b/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,21 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Add a FragmentContainerView with navigation/mobile_navigation as the navHost -->
-
+    <!-- Add a FragmentContainerView with navigation/mobile_navigation as the navHost -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/mobile_navigation"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
