--- a/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,7 +40,9 @@
             app:destination="@id/accompanimentMenuFragment" />
         <action
             android:id="@+id/action_sideMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment" />
+            app:destination="@id/startOrderFragment"
+            app:popUpTo="@id/startOrderFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/entreeMenuFragment"
@@ -52,7 +54,9 @@
             app:destination="@id/sideMenuFragment" />
         <action
             android:id="@+id/action_entreeMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment" />
+            app:destination="@id/startOrderFragment"
+            app:popUpTo="@id/startOrderFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/checkoutFragment"
@@ -61,7 +65,9 @@
         tools:layout="@layout/fragment_checkout" >
         <action
             android:id="@+id/action_checkoutFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment" />
+            app:destination="@id/startOrderFragment"
+            app:popUpTo="@id/startOrderFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/accompanimentMenuFragment"
@@ -73,6 +79,8 @@
             app:destination="@id/checkoutFragment" />
         <action
             android:id="@+id/action_accompanimentMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment" />
+            app:destination="@id/startOrderFragment"
+            app:popUpTo="@id/startOrderFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
