--- a/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -59,6 +59,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["bread"].name}'
+                    android:onClick='@{() -> viewModel.setAccompaniment("bread")}'
+                    android:checked='@{viewModel.accompaniment.name.equals(viewModel.menuItems["bread"].name)}'
                     tools:text="Accompaniment 1" />
 
                 <TextView
@@ -87,6 +89,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["berries"].name}'
+                    android:onClick='@{() -> viewModel.setAccompaniment("berries")}'
+                    android:checked='@{viewModel.accompaniment.name.equals(viewModel.menuItems["berries"].name)}'
                     tools:text="Accompaniment 2" />
 
                 <TextView
@@ -118,6 +122,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pickles"].name}'
+                    android:onClick='@{() -> viewModel.setAccompaniment("pickles")}'
+                    android:checked='@{viewModel.accompaniment.name.equals(viewModel.menuItems["pickles"].name)}'
                     tools:text="Accompaniment 3" />
 
                 <!-- TODO: set the text to the accompaniment description using the view model -->
@@ -153,6 +159,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
+                android:text="@{@string/subtotal(viewModel.subtotal)}"
                 tools:text="Subtotal $5.00"/>
 
             <!-- cancel the order when clicked -->
