--- a/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/fragment_side_menu.xml
+++ b/android-basics-kotlin-lunch-tray-app-main/app/src/main/res/layout/fragment_side_menu.xml
@@ -58,6 +58,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["salad"].name}'
+                    android:onClick='@{() -> viewModel.setSide("salad")}'
+                    android:checked='@{viewModel.side.name.equals(viewModel.menuItems["salad"].name)}'
                     tools:text="Side 1" />
 
                 <TextView
@@ -88,6 +90,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["soup"].name}'
+                    android:onClick='@{() -> viewModel.setSide("soup")}'
+                    android:checked='@{viewModel.side.name.equals(viewModel.menuItems["soup"].name)}'
                     tools:text="Side 2" />
 
                 <TextView
@@ -119,6 +123,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["potatoes"].name}'
+                    android:onClick='@{() -> viewModel.setSide("potatoes")}'
+                    android:checked='@{viewModel.side.name.equals(viewModel.menuItems["potatoes"].name)}'
                     tools:text="Side 3" />
 
                 <TextView
@@ -149,6 +155,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["rice"].name}'
+                    android:onClick='@{() -> viewModel.setSide("rice")}'
+                    android:checked='@{viewModel.side.name.equals(viewModel.menuItems["rice"].name)}'
                     tools:text="Side 4" />
 
                 <TextView
@@ -182,6 +190,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
+                android:text="@{@string/subtotal(viewModel.subtotal)}"
                 tools:text="Subtotal $5.00"/>
 
             <!-- cancel the order when clicked -->
@@ -197,7 +206,7 @@
             <Button
                 android:id="@+id/next_button"
                 style="@style/Widget.Order.Button.Next"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
                 android:onClick="@{() -> sideMenuFragment.goToNextScreen()}" />
