--- a/Unit4/android-basics-kotlin-amphibians-app-main/app/src/main/res/layout/fragment_amphibian_detail.xml
+++ b/Unit4/android-basics-kotlin-amphibians-app-main/app/src/main/res/layout/fragment_amphibian_detail.xml
@@ -29,16 +29,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- TODO: set the text to the name from the single Amphibian object in the view model -->
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
+            android:text="@{viewModel.amphibian.name}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Blue Jeans Frog"/>
+            tools:text="Blue Jeans Frog" />
 
         <View
             android:layout_width="match_parent"
@@ -49,13 +49,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"/>
 
-        <!-- TODO: set the text to the description from the Amphibian object in the view model -->
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:text="@{viewModel.amphibian.description}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
             tools:text="Bright red body, blue legs"/>
