--- a/Unit4/android-basics-kotlin-amphibians-app-main/app/src/main/res/layout/fragment_amphibian_list.xml
+++ b/Unit4/android-basics-kotlin-amphibians-app-main/app/src/main/res/layout/fragment_amphibian_list.xml
@@ -29,7 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- TODO: set the listData binding to the list of Amphibians from the view model -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
@@ -38,9 +37,10 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/list_view_item" />
+            listData="@{viewModel.amphibianList}"
+            tools:listitem="@layout/list_view_item"
+            tools:itemCount="16"/>
 
-        <!-- TODO: set the apiStatus binding to the status from the view model -->
         <ImageView
             android:id="@+id/status_image"
             android:layout_width="wrap_content"
@@ -48,7 +48,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            apiStatus="@{viewModel.status}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
